[package]
name = "rulip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.137", features=["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.18.2", features=["sync", "rt"] }

[dev-dependencies]
tokio = { version = "1.18.2", features = ["macros"] }
wiremock = "0.5.13"
dotenv = "0.15.0"
